PROJECT(LIBASCENDCL)

SET(TARGET_LIBRARY ascendcl)
SET(TARGET_LIBRARY_OP acl_op_compiler)
SET(CMAKE_CXX_STANDARD 17)
add_definitions(-D_GLIBCXX_USE_CXX11_ABI=1)
SET(CMAKE_INSTALL_PREFIX ${CMAKE_CURRENT_LIST_DIR})
ADD_COMPILE_OPTIONS(
        -Wall
        -O0
        -g
        -fPIC
)

FILE(GLOB SRC_FILE ${CMAKE_CURRENT_LIST_DIR}/*.cpp ${CMAKE_CURRENT_LIST_DIR}/simu/*.cpp)

if (BUILD_VISION)
    add_definitions(-DBUILD_VISION)
    set(MX_SDK_HOME $ENV{MX_SDK_HOME})
    include_directories(
        ${MX_SDK_HOME}/opensource/include
        ${MX_SDK_HOME}/opensource/include/opencv4
    )
else()
    list(REMOVE_ITEM SRC_FILE ${CMAKE_CURRENT_LIST_DIR}/simu/AscendSimuTikOperator.cpp)
endif()

list(REMOVE_ITEM SRC_FILE ${CMAKE_CURRENT_LIST_DIR}/acl_op_compiler.cpp)

ADD_LIBRARY(${TARGET_LIBRARY} SHARED ${SRC_FILE})
TARGET_INCLUDE_DIRECTORIES(${TARGET_LIBRARY} PRIVATE
    ${SECUREC_HOME}/include
)

ADD_LIBRARY(${TARGET_LIBRARY_OP} SHARED ${CMAKE_CURRENT_LIST_DIR}/acl_op_compiler.cpp)
TARGET_INCLUDE_DIRECTORIES(${TARGET_LIBRARY_OP} PRIVATE
    ${SECUREC_HOME}/include
)
INSTALL(TARGETS  ${TARGET_LIBRARY}  DESTINATION  lib)

INSTALL(TARGETS  ${TARGET_LIBRARY_OP}  DESTINATION  lib)